--- a/.gitignore
+++ b/.gitignore
@@ -114,3 +114,5 @@ src/out_ecogeom_2001-01-01_2001-01-06.nc
 src/out_hydro_2001-01-01_2001-01-06.nc
 *.mp4
 scripts/serc_fco2_fch4.nc
+src/out_ecogeom_2002-01-01_2004-01-01.nc
+src/out_hydro_2002-01-01_2004-01-01.nc
